<resources>
    <string name="app_name">MeusCupons</string>
    <string name="coupons">cupons</string>
    <string name="favorite">favoritos</string>
    <string name="complete">completos</string>
    <string name="configuration">Configurações</string>
    <string name="search">Buscar</string>
    <string name="status">adquiridos:</string>
    <string name="dueDate">vencimento em:</string>
    <string name="companyNameExample">Company Name</string>
    <string name="couponDescriptionExample">A description that define you coupon an the pride by conclusion favorite. Finally you must not put a text too long.</string>
    <string name="coupon">Cupom</string>
    <string name="readCoupon">Ler cupom</string>
    <string name="qrCodeCameraPermissionError">Não foi possivel abrir a camera</string>

    <string name="default_notification_channel_id">DefaultChannel</string>
    <string name="statusContent">%1$d / %2$d</string>
    <string name="receive">receber</string>

    <string name="dueDateDatePattern">%1$te/%1$tm/%1$tY</string>
    <string name="dueDateUndefined">sem prazo</string>

    <string name="favoriteItem">favoritar</string>
    <string name="delete">Excluir</string>

    <string name="welcomeTitle">Bem-vindo(a) ao MeusCupons</string>
    <string name="messageUsagePolicy">Leia a nossa %1$s. Toque em \"Concordar e continuar\" para aceitar os %2$s</string>
    <string name="buttonUsagePolicyOk">Concordar e continuar</string>
    <string name="privacyPolicy">Política de Privacidade</string>
    <string name="serviceTerms">Termos de Serviço</string>

    <string name="verifyNumber">Verifique seu número</string>
    <string name="messageVerifyNumber">O MeusCupons enviará um SMS (tarifa da sua operadora podem ser aplicadas) para verificar seu número de telefone. Insira o código do seu país e seu número de telefone: </string>
    <string name="hintVerifyNumber">seu número</string>

    <string name="countryChooseTitle">Selecione um país</string>
    <string name="ddiMask">+%1$s</string>
    <string name="defaultDDI">55</string>

    <!-- alert messages -->
    <string name="alertDeleteCouponTitle">Atenção</string>
    <string name="alertDeleteCouponMessage">Deseja excluir esse cupom?</string>
    <string name="alertPositiveResponse">Sim</string>
    <string name="alertNegativeResponse">Não</string>

    <string name="alertMessageEmptyPhoneNumber">Por favor, insira seu número de telefone.</string>
    <string name="alertMessageShortPhoneNumber">O número de telefone que você digitou é muito curto para o país: %1$s.\nInclua o coódigo de área (DDD) caso voceê não tenha colocado.</string>
    <string name="alertMessageInvalidPhoneNumber">%1$s.\nnão é um número válido para o país %2$s.</string>
    <string name="alertMessageSuccessPhoneNumber">Nós verificaremos o número:\n%1$s\nEsse número está correto ou deseja editá-lo?</string>

    <string name="alertButtonEdit">editar</string>

    <string name="titleVerifyCode">Verificar %1$s</string>
    <string name="messageVerifyCode">Enviamos um código por SMS para \n%1$s. %2$s</string>
    <string name="questionWrongPhoneNumber">Número errado?</string>
    <string name="hintEditText">-  -  -  -  -  -</string>
    <string name="messageHintVerifyCode">Digite o código de 6 digitos</string>

    <string name="loadingCodeMessage">Carregando</string>
    <string name="loadingValidateMessage">Validando</string>

    <string name="preferenceFileKey">myCouponPreferenceFile</string>

    <!-- transitions -->
    <string name="transitionCardCoupon">transitionCardCoupon</string>
    <string name="transitionImageCardCoupon">transitionImageCardCoupon</string>
    <string name="transitionCompanyNameCardCoupon">transitionCompanyNameCardCoupon</string>
    <string name="transitionDescriptionCardCoupon">transitionDescriptionCardCoupon</string>


    <!-- image descriptions -->
    <string name="imageLogoDescription">Logo do aplicativo</string>
    <string name="imageCouponDescription">Imagem no cupom</string>
    <string name="imageCompleteIconDescription">Imagem de um celo que indica que o cupom está completo</string>
    <string name="imageFavoriteIconDescription">Imagem de uma estrela para indicar botao de favoritar ou desfavoritar</string>
    <string name="imageArrowEmptyCoupon">Seta que indica aonde adiociona um cupom</string>

    <!-- empty coupons message -->
    <string name="emptyCouponsTitle">Não há cupons</string>
    <string name="emptyCouponsMessage">Adicione apertando aqui</string>

</resources>
