<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    tools:context=".WelcomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeTitle"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Title"
        android:textColor="@color/colorPrimary"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_marginTop="150dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/imageLogoDescription"
        android:tint="@color/textDisable"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/messageUsagePolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/messageUsagePolicy"
            android:textAlignment="center"
            android:textSize="12sp" />

        <Button
            android:id="@+id/next"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background_button_usage_policy"
            android:text="@string/buttonUsagePolicyOk"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>