<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:windowSoftInputMode="adjustResize"
    android:fitsSystemWindows="true"
    android:paddingBottom="30dp"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/verifyNumber"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Title"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/messageVerifyNumber"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Body1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingStart="40dp"
            android:paddingEnd="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ddi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textAlignment="textStart"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView" />

                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/hintVerifyNumber"
                    android:inputType="phone"
                    android:screenReaderFocusable="true"
                    android:selectAllOnFocus="true"
                    android:maxLength="13"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/background_button_usage_policy"
        android:text="@string/buttonUsagePolicyOk"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>

